Algunos arreglillos para publicar en beta

--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -175,7 +175,7 @@ div#main ul#list>li {
 	height: 122px;
 	display: block;
 	text-indent: -10000px;
-	background: url('logo-capital-alt.jpg') no-repeat;
+	background: url('logo-capital.png') no-repeat;
 	margin: 0 auto;
 }
 
