--- a/view/css/project/widget/support.css
+++ b/view/css/project/widget/support.css
@@ -23,17 +23,17 @@ div.widget.project-support dl {
 }
 
 div.widget.project-support dl dt {
-    margin-top: .4em;
+    margin-top: .8em;
 }
 
 div.widget.project-support dl dt,
 div.widget.project-support dl dd {
-    margin-left: 6em;
     text-transform: uppercase;
     font-size: 12px;
     display: block;
     min-height: 1.5em;
     line-height: 1.5em;
+	margin-left: 5.5em;
 }
 
 div.widget.project-support dl dd * {   
@@ -75,7 +75,7 @@ div.widget.project-support dl dd.minimum {
     line-height: 45px;    
     height: 45px;
     margin-top: 0;
-    padding-right: 35px;
+    padding-right: 28px;
     background: url('/view/css/euro/light-violet/l.png') no-repeat right center;
     display: inline-block;
 }
@@ -126,12 +126,13 @@ div.widget.project-support dl dd.supporters {
 /* Animated/static meter */
 div.widget.project-support > div.meter {
     overflow: visible;
+	margin-top: 20px;
 }
 
 body.project-show div#main > div.side > div.widget h3.title.ronda {
 	color:#20B3B2;
 	position:absolute;
-	top:54px;
+	top: 55px;
 	right:15px;
     text-transform: lowercase;
 }
@@ -142,7 +143,7 @@ div.widget.project-support div.graph {
     overflow: visible;            
     border-bottom: 2px solid #20B3B2;
     font-size: 0;
-    margin-left: 5px;
+    margin-left: 14px;
 /*    margin-top: 22px; */
     float: left;
     padding-top: 22px;
@@ -179,8 +180,7 @@ div.widget.project-support div.meter.ver div.graph .minimum .done {
 
 div.widget.project-support div.graph > div.minimum > div.done strong {
     background: url('/view/css/project/widget/support/marker.png') no-repeat center center;
-    display: block;
-    width: 29px;  
+    width: 30px;  
     padding: 0 8px 0 0;
     height: 20px;    
     margin-top: -9px;    
@@ -188,8 +188,10 @@ div.widget.project-support div.graph > div.minimum > div.done strong {
     font-size: 10px;
     font-weight: normal;    
     line-height: 20px;
-    margin-left: -12px;    
+    margin-left: -14px;    
     text-align: center;
+	display: block;
+	letter-spacing: -1px;
 }
 
 div.widget.project-support div.buttons {
@@ -208,6 +210,8 @@ div.widget.project-support a.button {
 div.widget.project-support a.more {
     float: right;
     text-decoration: none;
+	position: relative;
+	top: 16px;
 }
 
 /* Las tagmark */
@@ -216,14 +220,16 @@ div.widget.project-support div.tagmark {
     z-index: 9999;
     text-align: left;
     color: #ffffff;
-    font-size: 1.3em;
-    font-weight: bold;
+    font-size: 1.2em;
+    font-weight: normal;
     text-transform: uppercase;
     margin-left: -20px;
     top: 0px;
     width: 235px;
     height: 40px;
-    padding: 10px 30px 0px 35px;
+    padding: 13px 30px 0px 35px;
+	font-style: normal;
+	letter-spacing: 1px;
 }
 
 div.widget.project-support div.tagmark.green {
