Aportes paralelos, propiedad call->rest dinamica Tabla de proyectos: cantidades dinamicas, arreglos css para el show/hide

--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -461,7 +461,7 @@ table.info-table th.summary div.click{
 }
 table.info-table th.summary div.click span.icon{
 	height:10px;width:10px;
-	background:url('/view/css/project/widget/minusplus.png') 0 10px;
+	background:url('/view/css/project/widget/minusplus.png') 0 0px;
 	position:relative;right:5px;top:3px;
 	clear:left;
 }
@@ -473,44 +473,42 @@ table.info-table th.summary div.click span{
 	max-width:360px;
 }
 
-table.info-table th.summary div.click span.icon.closed{
-	background:url('/view/css/project/widget/minusplus.png') 0 0px;
+table.info-table th.summary div.click span.icon.open{
+	background:url('/view/css/project/widget/minusplus.png') 0 10px;
 }
 
 table.info-table th.summary div.click blockquote{
-/*	display:none;  Desplegado por defecto */
+	display:none; /* Plegado por defecto */
     padding: 0;
     margin: 3px 0 0 0;
     font-weight: normal;
 	margin-left:10px;
 	clear:left;
+    text-align: left;
 }
 
 
 table.info-table thead th {
     text-transform: uppercase;
+	vertical-align: bottom !important;
 }
 
 table.info-table th.summary {
-    text-align: left;
+    color: #58595B;
+    text-align: right;
     width:  100%;
+    font-weight: normal;
 }
 
 table.info-table *.min,
 table.info-table *.max {
     padding: 7px 1.5em;
-	text-align: center;
-	vertical-align: middle;
+	text-align: right;
+	vertical-align: top;
 }
 
 table.info-table *.min {
     color: #96238F;
-}
-
-table.info-table thead th.summary {
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
 }
 
 table.info-table tbody{
@@ -525,32 +523,6 @@ table.info-table tbody tr.even{background:#F3F2F2;border-bottom:#C1C1C1 1px dash
 table.info-table thead + tbody + thead th.min,
 table.info-table thead + tbody + thead th.max {
     font-size: 0;
-}
-
-
-table.info-table thead th.summary,
-table.info-table thead th.summary {
-	padding-left: 0;
-    background: none no-repeat .5em .5em;
-    min-height: 32px;        
-    line-height: 32px;
-}
-
-table.info-table thead + tbody + thead th.summary {
-    padding-top: 1em;
-    background-position: .5em 1em;
-}
-
-table.info-table thead.structure th.summary {
-    background-image: url('/view/css/icon/m/structure.png');
-}
-
-table.info-table thead.material th.summary {
-    background-image: url('/view/css/icon/m/material.png');
-}
-
-table.info-table thead.lend th.summary {
-    background-image: url('/view/css/icon/m/lend.png');
 }
 
 table.info-table tfoot th.total {
