--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -222,75 +222,89 @@ div.widget.projects  #widget-code textarea{width:200px;	margin: 10px 0;	padding:
 
 
 /* widget called - regado por convocatoria */
-div.widget.project-called {
+#project-called {
     background: url("/view/css/call/logo-capital.png") no-repeat 5px 5px #f5f2f0;
     min-height: 135px;
     padding-top: 0px;
     padding-bottom: 0px;
 }
 
-div.widget.project-called > div{
+
+#project-called a.expand {
+     bottom: 0;
+    left: 0;
+    padding: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+}
+
+#project-called > div{
     margin-right: -5px;
     margin-bottom: 0px;
     padding: 0px 0px 0px 75px;
+    position: relative;
+    z-index: 0;
 }
 
-div.widget.project-called div.amount {
+#project-called div.amount {
     display: none;
 }
 
-div.widget.project-called div.explain dl dt,
-div.widget.project-called div.amount dl dt {
+#project-called div.explain dl dt,
+#project-called div.amount dl dt {
     text-transform: uppercase;
     font-size: 0.8em;
 }
 
-div.widget.project-called div.explain dl dd {
+#project-called div.explain dl dd {
     color: #20b2b3;
     text-transform: uppercase;
     font-size: 1em;
     margin: 12px 0px;
 }
 
-div.widget.project-called div.explain p,
+#project-called div.explain p,
 div.widget.project-invest-amount.called  p {
     font-size: 0.9em;
     margin: 0px;
 }
 
-div.widget.project-called div.explain p strong,
+#project-called div.explain p strong,
 div.widget.project-invest-amount.called  p strong {
     color: #96238F;
 }
 
-div.widget.project-called div.amount dl dd {
+#project-called div.amount dl dd {
     margin: 0px;
 }
 
-div.widget.project-called div.amount dl dd span {
+#project-called div.amount dl dd span {
     font-size: 30px;
     font-weight: bold;
     padding-right: 25px;
 }
 
-div.widget.project-called div.amount dl dd.light-violet span {
+#project-called div.amount dl dd.light-violet span {
     background: url('/view/css/euro/light-violet/l.png') no-repeat right center;
     color: #BB70B6;
 }
 
-div.widget.project-called div.amount dl dd.violet span {
+#project-called div.amount dl dd.violet span {
     background: url('/view/css/euro/violet/l.png') no-repeat right center;
     color: #96238F;
 }
 
-div.widget.project-called.active {
+#project-called.active {
     background-color: #FFF;
 }
 
-div.widget.project-called.active div.explain {
+#project-called.active div.explain {
     display: none;
 }
 
-div.widget.project-called.active div.amount {
+#project-called.active div.amount {
     display: block !important;
 }
