--- a/view/css/project/widget/collaborations.css
+++ b/view/css/project/widget/collaborations.css
@@ -15,6 +15,7 @@ div.widget.project-collaborations ul li {
     min-height: 32px;    
     border-bottom: 1px solid #00b25a;
     margin-bottom: 1em;
+	padding-bottom: 10px;
 }
 
 div.widget.project-collaborations ul li > p {
